--- a/src/styles/blocks/_tariff.sass
+++ b/src/styles/blocks/_tariff.sass
@@ -9,7 +9,7 @@
   flex-direction: column
   box-shadow: 0px 3.78px 94.62px 0px rgba(0, 0, 0, 0.25)
   margin: 0
-  padding: 28px 0
+  padding: 37.85px 0 28px
   box-sizing: border-box
   animation: drop-in 3000ms ease 5000ms backwards
   &:nth-child(1)
@@ -45,8 +45,8 @@
 
   &__price-container
     display: flex
-    padding: 0 0 15.64px
-    margin: 0 0 15.64px
+    padding: 0 0 10.64px
+    margin: 0 0 10.64px
     border-bottom: 0.95px solid rgba(255, 255, 255, 0.1)
 
   &__title
@@ -76,7 +76,7 @@
     line-height: 48.45px
   &__price-period
     padding: 0
-    margin: 0 0 10px
+    margin: 0 0 10px 5px
     font-family: Inter, Arial, sans-serif
     font-size: 12px
     font-weight: 400
